--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,14 +10,29 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.3.1",
+    "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-dropdown-menu": "^2.1.14",
+    "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-popover": "^1.1.13",
+    "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.1.11",
+    "@radix-ui/react-toast": "^1.2.13",
+    "@tiptap/starter-kit": "^2.12.0",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "event-manage-fe": "file:",
+    "framer-motion": "^12.11.4",
     "lucide-react": "^0.509.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.3.1",
+    "react-datepicker": "^8.3.0",
+    "react-day-picker": "^8.10.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.5.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7"
