--- a/compose.dev.yaml
+++ b/compose.dev.yaml
@@ -33,6 +33,7 @@ services:
     user: "${UID:-1000}:${GID:-1000}"
     volumes:
       - ./:/var/www
+      - ./php/php.ini:/usr/local/etc/php/conf.d/custom.ini
     networks:
       - laravel-development
     depends_on:
