--- a/docker/development/nginx/nginx.conf
+++ b/docker/development/nginx/nginx.conf
@@ -8,7 +8,8 @@ http {
 
     sendfile        on;
     keepalive_timeout  65;
-
+    client_max_body_size 100M;
+    client_body_buffer_size 100M;
     server {
         listen 80;
         server_name localhost;
