--- a/my-app/package.json
+++ b/my-app/package.json
@@ -16,7 +16,7 @@
     "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-popover": "^1.1.13",
     "@radix-ui/react-select": "^2.2.4",
-    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.11",
     "@radix-ui/react-toast": "^1.2.13",
     "@tiptap/starter-kit": "^2.12.0",
@@ -27,6 +27,7 @@
     "event-manage-fe": "file:",
     "framer-motion": "^12.11.4",
     "lucide-react": "^0.509.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-datepicker": "^8.3.0",
     "react-day-picker": "^8.10.1",
