--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
     "@radix-ui/react-checkbox": "^1.3.1",
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
@@ -32,6 +33,7 @@
     "react-datepicker": "^8.3.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.5.3",
@@ -42,6 +44,7 @@
     "@eslint/js": "^9.25.0",
     "@types/node": "^22.15.17",
     "@types/react": "^19.1.2",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.19",
